[Notebooks] Small update on RQ1

--- a/notebooks/RQ1.ipynb
+++ b/notebooks/RQ1.ipynb
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "70e8f1eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_cnn = pd.read_excel(rq1_results_path / \"1.BaselineCNN_label_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
-    "vanilla_cbm_labels = pd.read_excel(rq1_results_path / \"1.VanillaCBM_label_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
-    "vanilla_cbm_concepts = pd.read_excel(rq1_results_path / \"1.VanillaCBM_concept_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
-    "reqaware_cbm_labels = pd.read_excel(rq1_results_path / \"1.ReqAware_label_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
-    "reqaware_cbm_concepts = pd.read_excel(rq1_results_path / \"1.ReqAware_concept_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})"
+    "baseline_cnn = pd.read_excel(rq1_results_path / \"BaselineCNN_label_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
+    "vanilla_cbm_labels = pd.read_excel(rq1_results_path / \"VanillaCBM_label_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
+    "vanilla_cbm_concepts = pd.read_excel(rq1_results_path / \"VanillaCBM_concept_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
+    "reqaware_cbm_labels = pd.read_excel(rq1_results_path / \"ReqAware_label_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})\n",
+    "reqaware_cbm_concepts = pd.read_excel(rq1_results_path / \"ReqAware_concept_results.xlsx\").rename(columns={'Unnamed: 0':'seed'})"
    ]
   },
   {
